reduce escape timeout

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# reduce escape timeout
+set -sg escape-time 10
+
 # sane split commands
 bind | split-window -h
 bind - split-window -v
