use vim-like keys for switching between panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,9 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# use vim-like keys for switching between panels 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
