use git rebase as default merge strategy

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,9 @@
   excludesfile = /Users/dpcardoso/.gitignore_global
   pager = delta
 
+[pull]
+  rebase = true
+
 [interactive]
   diffFilter = delta --color-only
 
