install tmux-pain-control plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,14 +9,8 @@ bind-key C-a send-prefix
 # reduce escape timeout
 set -sg escape-time 10
 
-# sane split commands
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+# list of plugins
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
-# use vim-like keys for switching between panels 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
