fix tmux reload bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # easy reload
-bind r source-file ~/.tmux.conf; display-message "~/.tmux.conf reloaded"
+bind r source-file ~/.tmux.conf\; display-message "~/.tmux.conf reloaded"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
