fix .npmrc artifactory

--- a/.npmrc
+++ b/.npmrc
@@ -2,5 +2,5 @@ email=diogo.cardoso@flutteruki.com
 strict-ssl=false
 always-auth=false
 registry=https://artifactory-prd.prd.betfair/artifactory/api/npm/npm
-_auth=${ARTIFACTORY_TOKEN}
+//artifactory-prd.prd.betfair/artifactory/api/npm/:_auth=${ARTIFACTORY_TOKEN}
 //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
